AM_CPPFLAGS = $(RN_CPPFLAGS) -I$(srcdir) -I$(top_srcdir)/Source
AM_CXXFLAGS = $(RN_CXXFLAGS)
AM_LDFLAGS = 

#libcat.a: static library
noinst_LIBRARIES = libminiupnpc.a

libminiupnpc_a_SOURCES = \
	igd_desc_parse.c miniupnpc.c minixml.c minisoap.c miniwget.c \
	upnpc.c upnpcommands.c upnpreplyparse.c testminixml.c \
	minixmlvalid.c testupnpreplyparse.c minissdpc.c \
	upnperrors.c testigddescparse.c testminiwget.c \
	connecthostport.c miniupnpc.h miniwget.h upnpcommands.h igd_desc_parse.h \
	upnpreplyparse.h upnperrors.h declspec.h

