AM_CPPFLAGS = -I$(srcdir) -I$(top_srcdir)/Source \
	-I/usr/include/python2.7 $(RN_CPPFLAGS) 
AM_CXXFLAGS = $(RN_CXXFLAGS)
AM_LDFLAGS = 

#libcat.a: static library
noinst_LIBRARIES = libminiupnpc.a

libminiupnpc_a_SOURCES = \
	bsdqueue.h \
	codelength.h \
	connecthostport.c \
	connecthostport.h \
	declspec.h \
	igd_desc_parse.c \
	igd_desc_parse.h \
	minisoap.c \
	minisoap.h \
	minissdpc.c \
	minissdpc.h \
	miniupnpc.c \
	miniupnpc.h \
	miniupnpcmodule.c \
	miniupnpcstrings.h.in \
	miniwget.c \
	miniwget.h \
	minixml.c \
	minixml.h \
	minixmlvalid.c \
	testigddescparse.c \
	testminiwget.c \
	testminixml.c \
	testupnpreplyparse.c \
	upnpc.c \
	upnpcommands.c \
	upnpcommands.h \
	upnperrors.c \
	upnperrors.h \
	upnpreplyparse.c \
	upnpreplyparse.h

