AM_CPPFLAGS = $(RN_CPPFLAGS) -I$(top_srcdir)/DependentExtensions
AM_CXXFLAGS = $(RN_CXXFLAGS)
AM_LDFLAGS = $(RN_LDFLAGS)

LIBS = $(RN_LIBS)

AUTOMAKE_OPTIONS = subdir-objects

#libminiupnpc.a: static library
lib_LIBRARIES = libminiupnpc.a

libminiupnpc_a_SOURCES = \


miniupnpcheadersdir = $(pkgincludedir)/miniupnpc
miniupnpcheaders_HEADERS = \
