AM_CPPFLAGS = -iquote$(top_srcdir)/Source $(RN_CPPFLAGS)
AM_CXXFLAGS = $(RN_CXXFLAGS)

AM_LDFLAGS = -rpath $(libdir)

LDADD = \
	$(top_builddir)/Source/libRakNet.la

#distributable programs
testsdir = $(pkgdatadir)/Samples/Tests
#tests_PROGRAMS = Tests

#Tests_SOURCES = \
#	CommonFunctions.cpp \
#	CommonFunctions.h \
#	ComprehensiveConvertTest.cpp \
#	ComprehensiveConvertTest.h \
#	ConnectWithSocketTest.cpp \
#	ConnectWithSocketTest.h \
#	CrossConnectionConvertTest.cpp \
#	CrossConnectionConvertTest.h \
#	DebugTools.cpp \
#	DebugTools.h \
#	DroppedConnectionConvertTest.cpp \
#	DroppedConnectionConvertTest.h \
#	EightPeerTest.cpp \
#	EightPeerTest.h \
#	IncludeAllTests.h \
#	LocalIsConnectedTest.cpp \
#	LocalIsConnectedTest.h \
#	ManyClientsOneServerBlockingTest.cpp \
#	ManyClientsOneServerBlockingTest.h \
#	ManyClientsOneServerDeallocateBlockingTest.cpp \
#	ManyClientsOneServerDeallocateBlockingTest.h \
#	ManyClientsOneServerDeallocateTest.cpp \
#	ManyClientsOneServerDeallocateTest.h \
#	ManyClientsOneServerNonBlockingTest.cpp \
#	ManyClientsOneServerNonBlockingTest.h \
#	MaximumConnectTest.cpp \
#	MaximumConnectTest.h \
#	MiscellaneousTestsTest.cpp \
#	MiscellaneousTestsTest.h \
#	OfflineMessagesConvertTest.cpp \
#	OfflineMessagesConvertTest.h \
#	PacketAndLowLevelTestsTest.cpp \
#	PacketAndLowLevelTestsTest.h \
#	PacketChangerPlugin.cpp \
#	PacketChangerPlugin.h \
#	PacketDropPlugin.cpp \
#	PacketDropPlugin.h \
#	PeerConnectDisconnectTest.cpp \
#	PeerConnectDisconnectTest.h \
#	PeerConnectDisconnectWithCancelPendingTest.cpp \
#	PeerConnectDisconnectWithCancelPendingTest.h \
#	PingTestsTest.cpp \
#	PingTestsTest.h \
#	RakTimer.cpp \
#	RakTimer.h \
#	ReliableOrderedConvertedTest.cpp \
#	ReliableOrderedConvertedTest.h \
#	SecurityFunctionsTest.cpp \
#	SecurityFunctionsTest.h \
#	SystemAddressAndGuidTest.cpp \
#	SystemAddressAndGuidTest.h \
#	TestHelpers.cpp \
#	TestHelpers.h \
#	TestInterface.cpp \
#	TestInterface.h \
#	Tests.cpp